@@ -373,8 +373,10 @@ void template12(struct parset *par, struct interferometer *ifo[], int ifonr);
 /**************************************************************************************************************************************************/
 
 void template15(struct parset *par, struct interferometer *ifo[], int ifonr);
-void LALHpHc(CoherentGW *waveform, double *hplus, double *hcross, int *l, int length, struct parset *par, struct interferometer *ifo, int ifonr);
-double LALFpFc(CoherentGW *waveform, double *wave, int *l, int length, struct parset *par, int ifonr);
+//void LALHpHc(CoherentGW *waveform, double *hplus, double *hcross, int *l, int length, struct parset *par, struct interferometer *ifo, int ifonr);
+void LALHpHc(CoherentGW *waveform, double *hplus, double *hcross, int *l, int length, struct parset *par, struct interferometer *ifo);
+//double LALFpFc(CoherentGW *waveform, double *wave, int *l, int length, struct parset *par, int ifonr);
+double LALFpFc(CoherentGW *waveform, double *wave, int length, struct parset *par, int ifonr);
 void LALfreedom(CoherentGW *waveform);
 
 /**************************************************************************************************************************************************/
